tests/neg/into-override.check
-- [E120] Naming Error: tests/neg/into-override.scala:15:6 -------------------------------------------------------------
15 |trait C[X] extends A[X]:  // error
   |      ^
   |      Name clash between defined and inherited member:
   |      def f(x: X): Unit in trait A at line 10 and
   |      override def f(x: Conversion.into[X]): Unit in trait C at line 16
   |      have the same type (x: Object): Unit after erasure.
   |
   |      Consider adding a @targetName annotation to one of the conflicting definitions
   |      for disambiguation.
   |
   | longer explanation available when compiling with `-explain`
-- [E120] Naming Error: tests/neg/into-override.scala:18:6 -------------------------------------------------------------
18 |class D[X] extends B[X], C[X] // error
   |      ^
   |      Name clash between inherited members:
   |      override def f(x: X): Unit in trait B at line 13 and
   |      override def f(x: Conversion.into[X]): Unit in trait C at line 16
   |      have the same type (x: Object): Unit after erasure.
   |
   |      Consider adding a @targetName annotation to one of the conflicting definitions
   |      for disambiguation.
   |
   | longer explanation available when compiling with `-explain`
-- [E120] Naming Error: tests/neg/into-override.scala:20:6 -------------------------------------------------------------
20 |trait E[X] extends C[X]: // error
   |      ^
   |      Name clash between defined and inherited member:
   |      override def f(x: Conversion.into[X]): Unit in trait C at line 16 and
   |      override def f(x: X): Unit in trait E at line 21
   |      have the same type (x: Object): Unit after erasure.
   |
   |      Consider adding a @targetName annotation to one of the conflicting definitions
   |      for disambiguation.
   |
   | longer explanation available when compiling with `-explain`
